[package]
name = "bevy_tiled_camera"
edition = "2021"
authors = ["sark"]
description = "A camera for rendering low resolution pixel art in bevy."
homepage = "https://github.com/sarkahn/bevy_tiled_camera"
keywords = ["bevy", "2d", "camera", "pixels"]
license = "MIT"
readme = "README.md"
version = "0.9.1"

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
sark_grids = { git = "https://github.com/materialcontext/sark_grids_rs.git", version = "0.5.9" }

[dependencies.bevy]
version = "0.14.1"

[dev-dependencies]
assert_approx_eq = "1.1.0"

[dev-dependencies.bevy]
version = "0.14.1"

[target.'cfg(unix)'.dev-dependencies.bevy]
version = "0.14.1"
